Fix: menu de accesibilidad

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/isotipo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CheckInt In</title>
+    <script>
+      window.UserWayOptions = {
+        account: 'nH8vgEc716',
+        position: 'custom',
+        buttonPosition: 'custom',
+        container: 'userway-container'
+      };
+    </script>
+    <script src="https://cdn.userway.org/widget.js"></script>
   </head>
   <body>
     <div id="root"></div>
